feat: 알림 설정 기능 구현 및 알림 조회 기능 구현